--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>News App</title>
     <!-- Compiled and minified CSS -->
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -37,6 +37,18 @@
                       <option value="us">United States</option>
                     </select>
                     <label>Choose your country</label>
+                  </div>
+                  <div class="input-field">
+                    <select name="category" id="category">
+                      <option value="general" selected>General</option>
+                      <option value="business">Business</option>
+                      <option value="entertainment">Entertainment</option>
+                      <option value="health">Health</option>
+                      <option value="science">Science</option>
+                      <option value="sports">Sports</option>
+                      <option value="technology">Technology</option>
+                    </select>
+                    <label>Choose your category</label>
                   </div>
                   <div class="input-field">
                     <input
